--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@ body {
   font-size: 25px;
 }
 h1 {
-  font-size: 100px;
+  font-size: 80px;
+}
+h2 {
+  font-size: 60px;
+}
+h3 {
+  font-size: 30px;
 }
 .first-section {
   width: 80%;
@@ -55,16 +61,13 @@ h1 {
   margin-top: 20px;
   width: 180px;
 }
-.box-text {
-  width: 50%;
-}
 .mission {
   width: 25%;
   padding: 0px 10px 10px 20px;
   background-color: gainsboro;
   border-radius: 20px;
 }
-.vission {
+.vision {
   width: 25%;
   padding: 0px 10px 10px 20px;
   background-color: pink;
@@ -75,4 +78,23 @@ h1 {
   background-color: powderblue;
   border-radius: 20px;
   padding: 0px 10px 10px 20px;
+}
+.third-section {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  font-size: 20px;
+  margin-bottom: 100px;
+}
+.third-section img {
+  padding-left: 2%;
+  width: 500px;
+}
+.third-para {
+  width: 90%;
+}
+
+.right-side-third {
+  padding-left: 10%;
 }
